Details
-
Bug
-
Resolution: Fixed
-
Major
-
None
Description
The shell data object placed on the clipboard doesn't set if it's been cut or copied, and the pasting function doesn't ask.
Patch attached which changes up IFShelper::CopyItems so moving is possible as well, the data object so that preferred drop effect is set, and the context menu so it checks and set this.
Attachments
Issue Links
- relates to
-
CORE-5586 shell: paste as link doesn't work right
-
- Resolved
-