[shell32] - Implement cut and paste shortcut - Patch by Huw Campbell - CORE-7548

svn path=/trunk/; revision=61049